fixed alignment

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -425,6 +425,8 @@ img {
 
 #footerIconWrapper {
 
+	margin-left: auto;
+	margin-right: auto;
 	width: 10%;
 }
 
@@ -455,6 +457,11 @@ img {
 	padding: 20px;
 	color: #B2B2B2;
 }
+
+ #iconLi {
+
+ 	display: inline-flex;
+ }
 
 
 /* too narrow to support 2 columns */
